--- a/website/style.css
+++ b/website/style.css
@@ -43,9 +43,10 @@ a {
     border-radius: 40px;
     top:35vh;
     left:10px;
-    margin-left: -50px;
+    margin-left: -60px;
     transition-duration: 0.3s;
     z-index: 100;
+    box-shadow: 0px 0px 10px black, 0px 0px 10px black;
 }
 
 #indicator{
@@ -213,6 +214,8 @@ tr:hover{
     top:0px;
     transition-duration: 0.2s;
     overflow-y: scroll;
+    max-width: 400px;
+    box-shadow: 0px 0px 10px black;
 }
 
 .preview {
@@ -684,6 +687,9 @@ input {
 
 /*===========================RESPONSIVE===================================*/
 @media screen and (max-width: 660px) {
+    .plane{
+        max-width: 600px;
+    }
     .right{
         margin-top: 0px;
     }
