--- a/website/style.css
+++ b/website/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+:root {
+    --angle: 300deg;
+  }
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -281,7 +286,7 @@ tr:hover{
     margin-left: 80px;
     margin-right: 60px;
     height: 70vh;
-    transition: background-color 0.5s ease;
+    transition: 0.5s ease;
     filter: invert(1) hue-rotate(180deg) brightness(1.5);
     border-radius: 7px;
 }
@@ -290,30 +295,36 @@ tr:hover{
     position: absolute;
     z-index: 410;
     height: 20px;
+    rotate: 45deg;
     animation-name: fly;
-    animation-duration: 20s;
+    animation-duration: 10s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
+.direction{
+    position: absolute;
+    z-index: 410;
+    top:50%;
+    left:50%;
+    width: 110vh;
+    height: 20px;
+    transform: translate(-50%,-50%) rotate(var(--angle));
+}
 /*=====================hiding map watermark=================*/
 .leaflet-control-attribution {
     display: none !important;
 }
 
-
 @keyframes fly{
     0%{
-        bottom: -30px;
-        left:15%;
+        margin-left: 0vw;
     }
-    50%{
-        bottom: calc(30px + 70vh);
-        left:75%;
+    90%{
+        margin-left: 110vh;
     }
     100%{
-        bottom: calc(30px + 70vh);
-        left:80%;
+        margin-left: 110vh;
     }
 }
 .right{
@@ -711,16 +722,6 @@ input {
         width: calc(100vw - 40px);
         height: 30vh;
         margin-top: 30px;
-    }
-    @keyframes fly{
-        0%{
-            bottom: -30px;
-            left:0%;
-        }
-        100%{
-            bottom: calc(30px + 30vh);
-            left:85%;
-        }
     }
     .top_dataverse{
         margin-left: 30px;
