--- a/website/style.css
+++ b/website/style.css
@@ -480,13 +480,45 @@ tr:hover{
     padding-left: 30px;
 }
 
+.circle{
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #31c356;
+    margin-top:7px;
+    margin-left: 3px;
+}
+
+#red{
+    background-color: rgb(244, 82, 82);
+}
+#yellow{
+    background-color: rgb(230, 230, 102);
+}
+
+#technologies{
+    display: flex;
+    flex-direction: row;
+    width: calc(35vw - 10px);
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 0px;
+    padding: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.323);
+}
+
+#technologies p{
+    font-size: large;
+    margin-left: 10px;
+}
+
 .tags {
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
     border: 1px solid rgba(255, 255, 255, 0.323);
     padding: 0px;
     display: flex;
     width: 35vw;
     margin: 20px;
+    margin-top: -1px;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -745,7 +777,7 @@ input {
     #about {
         padding-top: 90px;
         margin-top: 0;
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 
     /*.examples{
@@ -763,7 +795,7 @@ input {
 
     #develop {
         margin-top: 0;
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .section{
         width: calc(100% - 80px);
@@ -826,6 +858,10 @@ input {
 
     .subheading {
         font-size: larger;
+    }
+    #technologies{
+        font-size: large;
+        width: calc(75vw - 10px);
     }
 
     .text {
