--- a/website/style.css
+++ b/website/style.css
@@ -20,6 +20,10 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+input{
+    color: white;
+}
+
 button{
     cursor: pointer;
 }
