--- a/website/style.css
+++ b/website/style.css
@@ -5,7 +5,7 @@
 
 :root {
     --angle: 300deg;
-  }
+}
 
 
 html {
@@ -20,26 +20,29 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-input{
+input {
     color: white;
 }
 
-button{
+button {
     cursor: pointer;
 }
+
 ::-webkit-scrollbar {
     display: none;
 }
 
-::selection{
+::selection {
     background-color: rgba(0, 255, 255, 0.263);
     color: black;
 }
+
 a {
     color: white;
     text-decoration: none;
 }
-.buttons{
+
+.buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,24 +53,25 @@ a {
     background-color: #3b3b3b57;
     backdrop-filter: blur(2px);
     border-radius: 40px;
-    top:33vh;
-    left:10px;
+    top: 33vh;
+    left: 10px;
     margin-left: -60px;
     transition-duration: 0.3s;
     z-index: 100;
     box-shadow: 0px 0px 10px black, 0px 0px 10px black;
 }
 
-#indicator{
-    top:10px;
+#indicator {
+    top: 10px;
     height: 50px;
-    width:50px;
+    width: 50px;
     border-radius: 50%;
-    background-image: radial-gradient(rgba(255, 255, 255, 0.608),#00000000,#00000000);
+    background-image: radial-gradient(rgba(255, 255, 255, 0.608), #00000000, #00000000);
     position: absolute;
     transition-duration: 0.3s;
 }
-.group{
+
+.group {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,50 +80,60 @@ a {
     border-radius: 40px;
     border: 1px solid rgba(255, 255, 255, 0.236);
 }
-.buttons button{
+
+.buttons button {
     margin-top: 20px;
     background-color: #00000000;
     border: none;
 }
-#first_button{
+
+#first_button {
     margin-top: 0;
 }
-#moon{
+
+#moon {
     filter: invert(1);
 }
-#sun{
+
+#sun {
     filter: invert(1);
 }
-#default{
+
+#default {
     filter: invert(1);
     margin-top: 20px;
 }
-.copy{
+
+.copy {
     height: 20px;
     width: 20px;
 }
-#copy{
+
+#copy {
     font-size: 20px;
     color: white;
 }
-.top{
+
+.top {
     background-color: #3333337b;
     padding: 10px 7px 10px 7px;
     border: none;
     border-radius: 10px;
-    position:fixed;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     backdrop-filter: blur(7px);
     box-shadow: 5px 5px 10px black;
     z-index: 50;
-    
+
 }
-#top{
+
+#top {
     opacity: 0;
     transition-duration: 0.3s;
 }
-.top img{
+
+.top img {
     height: 20px;
 }
 
@@ -139,18 +153,25 @@ table {
     margin-top: 60px;
     width: 100%;
 }
-table, th, td {
+
+table,
+th,
+td {
     border: none;
 }
-th, td {
+
+th,
+td {
     padding: 20px;
     text-align: center;
 }
+
 tr {
     background-color: #31313100;
     transition-duration: 0.2s;
 }
-tr:hover{
+
+tr:hover {
     background-color: rgba(59, 59, 59, 0.527);
 }
 
@@ -161,19 +182,20 @@ tr:hover{
     transition-duration: 0s;
 }
 
-#glow{
-    top:-20px;
-    left:-20px;
+#glow {
+    top: -20px;
+    left: -20px;
     height: 80px;
     z-index: -10;
     opacity: 0;
     filter: brightness(1.7);
 }
 
-#glow:hover{
+#glow:hover {
     opacity: 1;
 }
-#normal:hover{
+
+#normal:hover {
     z-index: -105;
 }
 
@@ -188,16 +210,20 @@ tr:hover{
     z-index: 120;
     transition-duration: 0.5s;
 }
-#cross{
+
+#cross {
     z-index: 250;
     display: none;
 }
-#burger{
+
+#burger {
     z-index: 250;
 }
-#lines{
+
+#lines {
     z-index: 200;
 }
+
 .line {
     height: 2px;
     width: 35px;
@@ -211,7 +237,7 @@ tr:hover{
     margin-top: 5px;
 }
 
-.plane{
+.plane {
     height: 110vh;
     width: calc(100vw - 60px);
     background-color: #0f0f0fba;
@@ -219,7 +245,7 @@ tr:hover{
     position: fixed;
     z-index: 103;
     right: -100vw;
-    top:0px;
+    top: 0px;
     transition-duration: 0.2s;
     overflow-y: scroll;
     max-width: 400px;
@@ -256,7 +282,8 @@ tr:hover{
     margin-top: 40px;
     font-size: x-large;
 }
-.top_dataverse{
+
+.top_dataverse {
     display: flex;
 }
 
@@ -269,17 +296,18 @@ tr:hover{
     animation-timing-function: linear;
 }
 
-@keyframes hue{
-    0%{
+@keyframes hue {
+    0% {
         filter: hue-rotate(0deg);
     }
-    100%{
+
+    100% {
         filter: hue-rotate(360deg);
     }
 }
 
-#download{
-    padding-top:90px;
+#download {
+    padding-top: 90px;
     height: calc(100vh - 290px);
     display: flex;
 }
@@ -294,7 +322,7 @@ tr:hover{
     border-radius: 7px;
 }
 
-#aeroplane{
+#aeroplane {
     position: absolute;
     z-index: 410;
     height: 20px;
@@ -305,44 +333,50 @@ tr:hover{
     animation-timing-function: linear;
 }
 
-.direction{
+.direction {
     position: absolute;
     z-index: 410;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     width: 110vh;
     height: 20px;
-    transform: translate(-50%,-50%) rotate(var(--angle));
+    transform: translate(-50%, -50%) rotate(var(--angle));
 }
-/*=====================hiding map watermark=================*/
-.leaflet-control-attribution {
+
+/=====================hiding map watermark=================/ .leaflet-control-attribution {
     display: none !important;
 }
 
-@keyframes fly{
-    0%{
+@keyframes fly {
+    0% {
         margin-left: 0vw;
     }
-    90%{
+
+    90% {
         margin-left: 110vh;
     }
-    100%{
+
+    100% {
         margin-left: 110vh;
     }
 }
-.right{
-    margin-top:80px;
+
+.right {
+    margin-top: 80px;
 }
-.top_dataverse p{
+
+.top_dataverse p {
     font-size: xxx-large;
 }
-#intro_text{
+
+#intro_text {
     font-size: x-large;
     width: 40vw;
     word-wrap: break-word;
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
 #download_btn {
     background-color: #00000000;
     border: 1px solid white;
@@ -354,31 +388,33 @@ tr:hover{
     border-radius: 5px;
 }
 
-.scroll_icon{
+.scroll_icon {
     position: fixed;
     bottom: 25px;
-    left:50vw;
+    left: 50vw;
     transform: translate(-50%);
     font-size: x-small;
     transition-duration: 0.3s;
 }
 
-.shadow{
+.shadow {
     height: 20px;
     width: 180px;
-    background-image: linear-gradient(115deg, #00000000,#000000d4,#00000000);
+    background-image: linear-gradient(115deg, #00000000, #000000d4, #00000000);
     position: absolute;
     margin-top: -20px;
     animation-name: wave;
     animation-duration: 2s;
-    animation-iteration-count:infinite;
+    animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
-@keyframes wave{
-    0%{
+
+@keyframes wave {
+    0% {
         margin-left: -180px;
     }
-    100%{
+
+    100% {
         margin-left: 7rem;
     }
 }
@@ -387,7 +423,7 @@ tr:hover{
     padding-top: 200px;
     display: flex;
     padding-bottom: 0;
-    border-image: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0), #FDE725, #7AD151, #22A884, #2A788E, #414487, #440154) 1;
+    border-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), #FDE725, #7AD151, #22A884, #2A788E, #414487, #440154) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
@@ -395,26 +431,27 @@ tr:hover{
     border-right-style: none;
 }
 
-#charts{
+#charts {
     padding-top: 0;
     margin-top: 30px;
     margin-bottom: 120px;
     margin-left: -30px;
     display: flex;
     flex-direction: column;
-    border-image: linear-gradient(black,black) 1;
+    border-image: linear-gradient(black, black) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
     border-bottom-style: none;
     border-right-style: none;
 }
-#charts p{
+
+#charts p {
     margin-left: 20px;
     width: calc(100vw - 40px);
 }
 
-.examples{
+.examples {
     border-radius: 10px 0px 0px 10px;
     margin-left: 0%;
     width: 100vw;
@@ -423,14 +460,15 @@ tr:hover{
     background-color: #16161600;
     margin-left: 0px;
 }
-.examples img{
+
+.examples img {
     height: 35vh;
     margin: 20px;
     box-shadow: 5px -3px 10px rgb(0, 0, 0);
     border-radius: 3px;
 }
 
-.scroll_animate{
+.scroll_animate {
     background-color: rgba(255, 255, 255, 0);
     margin-bottom: 30px;
     height: 4px;
@@ -441,7 +479,7 @@ tr:hover{
     display: flex;
     padding-top: 0;
     padding-bottom: 0;
-    border-image: linear-gradient(#440154, #260590, #5F01A5, #A31E99, #EC7535, #F2F224,rgba(0, 0, 0, 0)) 1;
+    border-image: linear-gradient(#440154, #260590, #5F01A5, #A31E99, #EC7535, #F2F224, rgba(0, 0, 0, 0)) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
@@ -453,7 +491,7 @@ tr:hover{
     display: flex;
     padding-top: 0;
     padding-bottom: 0;
-    border-image: linear-gradient(rgba(0, 0, 0, 0),#F5E020, #C5BD5B, #37B89D, #0C86D4, #2841B2, rgba(0, 0, 0, 0)) 1;
+    border-image: linear-gradient(rgba(0, 0, 0, 0), #F5E020, #C5BD5B, #37B89D, #0C86D4, #2841B2, rgba(0, 0, 0, 0)) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
@@ -462,40 +500,42 @@ tr:hover{
 }
 
 
-.section.big_container{
+.section.big_container {
     transform: translateX(0);
     opacity: 1;
-  }
-  .section{
+}
+
+.section {
     position: relative;
     transform: translateY(-100px);
     opacity: 0;
     transition: .5s all ease;
-  }
+}
 
-.section{
+.section {
     width: calc(100vw - 60px);
     margin-left: 30px;
     padding-left: 30px;
 }
 
-.circle{
+.circle {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background-color: #31c356;
-    margin-top:7px;
+    margin-top: 7px;
     margin-left: 3px;
 }
 
-#red{
+#red {
     background-color: rgb(244, 82, 82);
 }
-#yellow{
+
+#yellow {
     background-color: rgb(230, 230, 102);
 }
 
-#technologies{
+#technologies {
     display: flex;
     flex-direction: row;
     width: calc(35vw - 10px);
@@ -505,7 +545,7 @@ tr:hover{
     border: 1px solid rgba(255, 255, 255, 0.323);
 }
 
-#technologies p{
+#technologies p {
     font-size: large;
     margin-left: 10px;
 }
@@ -547,7 +587,7 @@ tr:hover{
 }
 
 #exceltag {
-    background: linear-gradient(to right, #008120, #42ea00,#15672a);
+    background: linear-gradient(to right, #008120, #42ea00, #15672a);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -622,10 +662,12 @@ footer {
     padding-left: 10vw;
     padding-right: 10vw;
 }
-#last_link{
-    margin-top:16px;
+
+#last_link {
+    margin-top: 16px;
     margin-left: 60px;
 }
+
 form {
     background-color: #4c4c4c2a;
     backdrop-filter: blur(7px);
@@ -653,11 +695,11 @@ input {
     width: min-content;
     background-color: rgba(0, 123, 121, 0.364);
     cursor: pointer;
-    color:rgba(255, 255, 255, 0.63);
+    color: rgba(255, 255, 255, 0.63);
     transition-duration: 0.3s;
 }
 
-#send:hover{
+#send:hover {
     color: black;
     background-color: rgba(0, 240, 236, 0.867);
     box-shadow: 0px 0px 10px cyan;
@@ -691,13 +733,13 @@ input {
     transform: translate(-50%);
     margin-bottom: 20px;
     margin-top: 50px;
-    background-image: linear-gradient(to right,rgba(0, 0, 0, 0),rgb(255, 255, 255),rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(255, 255, 255), rgba(0, 0, 0, 0));
 }
 
 .links {
     font-weight: 100;
     background-color: #121212;
-    height: 80px;
+    height: auto;
     margin-top: 50px;
     text-align: center;
     padding-top: 20px;
@@ -706,75 +748,95 @@ input {
 .links a {
     color: rgba(255, 255, 255, 0.433);
 }
-.links p {
+
+.links h3 {
     color: rgba(255, 255, 255, 0.433);
 }
-.end_line{
+
+.end_line {
     width: 80vw;
-    margin-top: 7px;
+    margin-top: 25px;
     margin-left: 50%;
     transform: translate(-50%);
     height: 0.1px;
     background-color: rgba(255, 255, 255, 0.433);
 }
-.small{
+
+.small {
     display: flex;
-    font-size: small;
+    font-size: medium;
     justify-content: space-around;
 }
-.small a{
-    margin-top: 10px;
+
+.small a {
+    margin-top: 20px;
     z-index: 10;
     border-bottom: 0px solid rgba(255, 255, 255, 0);
     transition-duration: 0.3s;
 }
-.small a:hover{
+
+.small i {
+    margin-top: 20px;
+    z-index: 10;
+    border-bottom: 0px solid rgba(255, 255, 255, 0);
+    transition-duration: 0.3s;
+}
+
+.small a:hover {
     border-bottom: 1px solid rgba(255, 255, 255, 0.433);
 }
-.link_class{
+
+.link_class {
     display: flex;
     flex-direction: column;
     text-align: left;
 }
 
-/*===========================RESPONSIVE===================================*/
-@media screen and (max-width: 660px) {
-    .plane{
+/===========================RESPONSIVE===================================/ @media screen and (max-width: 660px) {
+    .plane {
         max-width: 600px;
     }
-    .right{
+
+    .right {
         margin-top: 0px;
     }
-    #download{
+
+    #download {
         padding-top: 70px;
         height: fit-content;
         flex-direction: column-reverse;
     }
-    #map{
+
+    #map {
         margin-left: 20px;
         width: calc(100vw - 40px);
         height: 40vh;
         margin-top: 20px;
     }
-    .top_dataverse{
+
+    .top_dataverse {
         margin-left: 30px;
     }
-    .top_dataverse p{
+
+    .top_dataverse p {
         font-size: xx-large;
     }
-    #intro_text{
+
+    #intro_text {
         font-size: medium;
         width: calc(100vw - 60px);
         margin-left: 30px;
         margin-top: 10px;
         margin-bottom: 20px;
     }
+
     #download_btn {
         position: absolute;
         left: 50%;
         margin-top: 45vh;
         transform: translate(-50%);
     }
+
     #about {
         padding-top: 90px;
         margin-top: 0;
@@ -798,23 +860,27 @@ input {
         margin-top: 0;
         flex-direction: column;
     }
-    .section{
+
+    .section {
         width: calc(100% - 80px);
     }
-    #examples{
+
+    #examples {
         margin-top: 30px;
     }
+
     #charts {
         flex-direction: column;
         width: calc(100%);
         margin-bottom: 40px;
     }
-    #charts p{
+
+    #charts p {
         margin-left: 20px;
         width: calc(100vw - 40px);
     }
 
-    .examples img{
+    .examples img {
         height: 25vh;
     }
 
@@ -822,7 +888,8 @@ input {
         margin-top: 20px;
         width: 70vw;
     }
-    .subheading{
+
+    .subheading {
         margin: 0;
         margin-top: 20px;
     }
@@ -860,7 +927,8 @@ input {
     .subheading {
         font-size: larger;
     }
-    #technologies{
+
+    #technologies {
         font-size: large;
         width: calc(75vw - 10px);
     }
@@ -874,7 +942,8 @@ input {
         font-size: medium;
         width: 75vw;
     }
-    #contribute{
+
+    #contribute {
         margin-top: 20px;
         transform: translate(-55%);
     }
@@ -894,7 +963,7 @@ input {
     width: 0vw;
     background: rgb(218, 165, 32);
     transition: width 200ms linear;
-  }
+}
 
 .custom-alert {
     display: none;
@@ -922,10 +991,11 @@ input {
     color: white;
 }
 
-.row_buttons{
+.row_buttons {
     display: flex;
     justify-content: space-around;
 }
+
 .custom-alert button {
     margin-top: 20px;
     background-color: #efefefeb;
@@ -934,7 +1004,7 @@ input {
     padding: 5px 20px 5px 20px;
 }
 
-#later{
+#later {
     color: white;
     background-color: #00000000;
 }
@@ -968,14 +1038,15 @@ input {
 }
 
 #codeOfconduct h2 {
-    background: linear-gradient(to bottom, rgba(143, 143, 143, 0.8), #8f8f8f);;
+    background: linear-gradient(to bottom, rgba(143, 143, 143, 0.8), #8f8f8f);
+    ;
     text-align: center;
     font-size: 1.8em;
     margin-top: 40px;
     margin-bottom: 10px;
 }
 
-#codeOfconduct p {  
+#codeOfconduct p {
     font-size: 1.1em;
 }
 
