fixed style.css bugs

--- a/website/style.css
+++ b/website/style.css
@@ -343,7 +343,8 @@ tr:hover {
     transform: translate(-50%, -50%) rotate(var(--angle));
 }
 
-/=====================hiding map watermark=================/ .leaflet-control-attribution {
+/*=====================hiding map watermark=================*/ 
+.leaflet-control-attribution {
     display: none !important;
 }
 
@@ -792,7 +793,8 @@ input {
     text-align: left;
 }
 
-/===========================RESPONSIVE===================================/ @media screen and (max-width: 660px) {
+/*===========================RESPONSIVE===================================*/ 
+@media screen and (max-width: 660px) {
     .plane {
         max-width: 600px;
     }
