--- a/website/style.css
+++ b/website/style.css
@@ -370,27 +370,28 @@ footer {
     color: white;
 }
 
-.go-top-btn {
+.top {
+    background-color: #3333337b;
+    padding: 10px 7px 10px 7px;
+    border: none;
+    border-radius: 10px;
     position: fixed;
-    bottom: 35px;
-    right: 35px;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 65px;
-    width: 65px;
-    background: #fff;
-    border: 3px solid #333;
-    display: none;
-    justify-content: center;
-    z-index: 1000; 
-    align-items: center;
-  }
-  
-  .go-top-btn img {
-    width: 50px;
-    height: 50px;
-  }
+    bottom: 10px;
+    right: 10px;
+    backdrop-filter: blur(7px);
+    box-shadow: 5px 5px 10px black;
+    z-index: 50;
 
+}
+
+#top {
+    opacity: 0;
+    transition-duration: 0.3s;
+}
+
+.top img {
+    height: 20px;
+}
 
 #navbar {
     width: 100vw;
