--- a/website/style.css
+++ b/website/style.css
@@ -1056,6 +1056,7 @@ input {
     z-index: 10;
     border-bottom: 0px solid rgba(255, 255, 255, 0);
     transition-duration: 0.3s;
+    color:rgb(192, 192, 192);
 }
 
 .small i {
