--- a/website/style.css
+++ b/website/style.css
@@ -20,7 +20,7 @@ html {
     position: fixed;
     z-index: 200;
     min-height: 100vh;
-    background: #F5F9FF;
+    background: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +37,7 @@ html {
 }
 .loader {
     --path: goldenrod;
-    --dot: rgb(0, 141, 141);
+    --dot: rgb(0, 213, 213);
     --duration: 3s;
     width: 44px;
     height: 44px;
@@ -378,19 +378,20 @@ body.light-mode footer h3{
 
 /* Center the button in the navbar */
 .loginSignupbtn {
-    background-color: dimgray;
+    background-color: rgba(162, 162, 162, 0.203);
     height: 40px;
-    width: 130px;
+    width: min-content;
     font-size: 17px;
     border: none;
-    border-radius: 10px;
+    border-radius: 7px;
+    padding: 0px 30px 0px 30px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     position: absolute; /* Make the button positionable */
-    right: 60px; /* Distance from the right side */
+    right: 65px; /* Distance from the right side */
     top: 10px; /* Adjust the vertical positioning as needed */
 
 }
@@ -419,7 +420,7 @@ body.light-mode footer h3{
 @media (max-width: 768px) {
     #navbar {
         flex-direction: column;
-        height: auto;
+        height: 60px;
     }
 
     .loginSignupbtn {
@@ -462,11 +463,12 @@ tr:hover {
 
 #glow {
     top: -20px;
-    left: -20px;
+    left: -17px;
     height: 80px;
     z-index: -10;
     opacity: 0;
     filter: brightness(1.7);
+    height: 78px;
 }
 
 #glow:hover {
@@ -1142,7 +1144,7 @@ input {
     }
 
     #download {
-        margin-top: -30px;
+        margin-top: -70px;
         padding-top: 0px;
         height: fit-content;
         flex-direction: column-reverse;
@@ -1151,7 +1153,7 @@ input {
     #map {
         margin-left: 20px;
         width: calc(100vw - 40px);
-        height: 40vh;
+        height: 35vh;
         margin-top: 20px;
     }
 
@@ -1303,6 +1305,7 @@ input {
     position: fixed;
     z-index: 90;
     top: 59.8px;
+    left:0;
     height: 1.9px;
     box-shadow: 0px 0px 5px goldenrod;
     width: 0vw;
