--- a/website/style.css
+++ b/website/style.css
@@ -1009,9 +1009,20 @@ input {
     width: 50vw;
     margin-left: calc(50vw + 15px);
     transform: translate(-50%);
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-top: 50px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(255, 255, 255), rgba(0, 0, 0, 0));
+}
+.colorchange{
+    margin-bottom: 50px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #00ffccda, rgba(0, 0, 0, 0));
+    
+
+}
+.footer_gap{
+    margin-top: 40px;
+    /* margin-bottom: 100px; */
+    
 }
 
 .links {
@@ -1024,7 +1035,7 @@ input {
 }
 
 .links a {
-    color: rgba(255, 255, 255, 0.433);
+    color: rgba(255, 255, 255, 0.897);
 }
 
 .links h3 {
@@ -1037,7 +1048,8 @@ input {
 
 .end_line {
     width: 80vw;
-    margin-top: 25px;
+    margin-top: 60px;
+    margin-bottom: 50px;
     margin-left: 50%;
     transform: translate(-50%);
     height: 0.1px;
@@ -1067,6 +1079,7 @@ input {
 
 .small a:hover {
     border-bottom: 1px solid rgba(255, 255, 255, 0.433);
+    color: #00ffccd0;
 }
 
 .link_class {
