--- a/website/style.css
+++ b/website/style.css
@@ -7,6 +7,31 @@
     --angle: 300deg;
 }
 
+.star-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+}
+
+.star-rating input {
+    display: none;
+}
+
+.star-rating label {
+    font-size: 2rem;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.star-rating input:checked ~ label {
+    color: #ffdd00;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+    color: #ffdd00;
+}
+
 
 html {
     scroll-behavior: smooth;
